--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,8 @@
   "name": "campus-events-fresh",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://super30-eventannouncer-u1ag.vercel.app",
+
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
