--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
+    "cloudinary": "^1.41.3",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -20,8 +21,8 @@
     "express": "^5.1.0",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
-    "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3"
   }
