--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,12 @@
     "dotenv": "^16.5.0",
     "express-session": "^1.18.1",
     "mongoose": "^8.15.2",
-    "nodemailer": "^7.0.3",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
