--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,14 @@
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
-    "nodemailer": "^7.0.3"
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5"
   }
 }
